# snooze

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
snooze/: comments.py  comments_test.py  main.py  main_test.py  parser.py  parser_test.py
snooze/test_resources/: hello_world.cpp  hello_world.py
tests/: conftest.py  test_main.py  test_parser.py
tests/test_resources/: hello_world.c  hello_world.java  hello_world.js
