[metadata]
name = snooze
description = Leave reminders in your code. Useful to set a timer on FIXMEs, TODOs & scheduled releases.
long_description = file: README.md
url = https://github.com/yonromai/snooze
project_urls =
    Source=https://github.com/yonromai/snooze
    Tracker=https://github.com/yonromai/snooze/issues
author = Romain Yon
author_email = yonromai@users.noreply.github.com
license = MIT license
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development
    Topic :: Utilities
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
# FIXME: add to build
platforms = unix, linux, osx, cygwin, win32
python_requires = >=3.5

[flake8]
exclude = .git,__pycache__,.eggs/,venv
# from: https://github.com/psf/black/blob/master/README.md#line-length
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[isort]
# from: https://github.com/psf/black/blob/master/README.md
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
# from: https://github.com/pytest-dev/pytest/blob/master/tox.ini
atomic=true
not_skip=__init__.py
known_first_party =
    snooze
    tests


[mypy]
mypy_path=snooze:tests
# from: https://github.com/psf/black/blob/master/mypy.ini
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version=3.6
platform=linux
# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True
# show error messages from unrelated files
follow_imports=normal
# suppress errors about unsatisfied imports
ignore_missing_imports=True
# be strict
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True
disallow_any_generics=True
# The following are off by default.  Flip them on if you feel
# adventurous.
disallow_untyped_defs=True
check_untyped_defs=True
# No incremental mode
cache_dir=/dev/null